Update app name

--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -26,7 +26,7 @@
             android:id="@+id/textDesc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/we_are_in_code_freeze_and_this_issue_tracker_is_no_longer_actively_monitored_i_ll_be_closing_pr_that_do_not"
+            android:text="@string/description"
             android:textColor="?android:attr/textColorSecondary"
             android:textSize="18sp"
             android:visibility="visible" />
