--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -12,12 +12,11 @@
         android:id="@+id/etTitle"
         android:layout_width="318dp"
         android:layout_height="50dp"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="Enter Title"
         android:inputType="textPersonName"
         android:textColorLink="@color/colorPrimary"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,13 +24,16 @@
     <EditText
         android:id="@+id/etDes"
         android:layout_width="318dp"
-        android:layout_height="101dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="19dp"
+        android:autoLink="web|email|phone|map"
         android:ems="10"
         android:hint="Enter Description"
-        android:inputType="textMultiLine"
-        app:layout_constraintRight_toRightOf="parent"
+        android:inputType="textMultiLine|textLongMessage"
+        android:maxLength="2000"
+        android:textAllCaps="false"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="19dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 
     <Button
@@ -45,5 +47,6 @@
         android:text="@string/add"
         android:textColor="@android:color/white"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDes" />
+        app:layout_constraintTop_toBottomOf="@+id/etDes"
+        tools:ignore="RtlHardcoded" />
 </android.support.constraint.ConstraintLayout>
