--- a/app/src/main/res/layout/ticket.xml
+++ b/app/src/main/res/layout/ticket.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,66 +12,24 @@
         android:layout_height="wrap_content"
         android:layout_margin="3pt"
         android:background="@drawable/background_layout"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2pt"
+            android:layout_weight="1"
             android:text="@string/title"
             android:textColor="@android:color/black"
             android:textColorLink="@android:color/holo_blue_light"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textDesc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/description"
-            android:textColor="?android:attr/textColorSecondary"
-            android:textSize="18sp"
-            android:visibility="visible" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <Button
-                android:id="@+id/btnEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:onClick=" "
-                android:text="@string/edit"
-                android:textColor="@android:color/white"
-                android:textSize="12sp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.06" />
-
-            <Button
-                android:id="@+id/btnDelete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@android:color/holo_red_light"
-                android:text="@string/delete"
-                android:textColor="@android:color/white"
-                android:textSize="12sp"
-                tools:ignore="HardcodedText" />
-
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/ivEdit"
+            android:layout_width="40dp"
+            android:layout_height="24dp"
+            app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
     </LinearLayout>
 
 </LinearLayout>
