--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -14,7 +14,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Enter Title"
+        android:hint="@string/enter_title"
         android:inputType="textPersonName"
         android:textColorLink="@color/colorPrimary"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginTop="19dp"
         android:autoLink="web|email|phone|map"
         android:ems="10"
-        android:hint="Enter Description"
+        android:hint="@string/enter_description"
         android:inputType="textMultiLine|textLongMessage"
         android:maxLength="2000"
         android:textAllCaps="false"
@@ -36,17 +36,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTitle" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="109dp"
-        android:layout_height="48dp"
-        android:layout_marginRight="33dp"
-        android:layout_marginTop="23dp"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="saveAction"
-        android:text="@string/add"
-        android:textColor="@android:color/white"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etDes"
-        tools:ignore="RtlHardcoded" />
 </android.support.constraint.ConstraintLayout>
