--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/addNotes"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@drawable/ic_note_add_white_24dp"
         android:title="@string/add"
         app:showAsAction="ifRoom" />
 </menu>
