--- a/app/src/main/res/layout/activity_manage_notes.xml
+++ b/app/src/main/res/layout/activity_manage_notes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ipanardian.noteapp.AddNotes"
+    tools:context="com.ipanardian.noteapp.ManageNotes"
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
