--- a/app/src/main/res/layout/note.xml
+++ b/app/src/main/res/layout/note.xml
@@ -8,28 +8,24 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/lyNote"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3pt"
+        android:layout_margin="0pt"
         android:background="@drawable/background_layout"
+        android:clickable="true"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="2pt"
             android:layout_weight="1"
             android:text="@string/title"
             android:textColor="@android:color/black"
-            android:textColorLink="@android:color/holo_blue_light"
             android:textSize="18sp" />
 
-        <ImageView
-            android:id="@+id/ivEdit"
-            android:layout_width="40dp"
-            android:layout_height="24dp"
-            app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
     </LinearLayout>
 
 </LinearLayout>
