--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303f9f</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorGray">#d4d3d3</color>
+    <color name="colorSmoothGray">#d4d3d3</color>
+    <color name="colorGray">#666666</color>
+    <color name="colorDarkGray">#333333</color>
 </resources>
