--- a/app/src/main/res/layout/activity_view_notes.xml
+++ b/app/src/main/res/layout/activity_view_notes.xml
@@ -8,8 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_height="match_parent"
         android:background="@drawable/background_layout"
         android:orientation="vertical">
 
